[tool.poetry]
name = "hackedgpt"
version = "0.1.0"
description = ""
authors = ["Christo Goosen <christogoosen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
python-dotenv = "^1.0.0"
openai = "^0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
